crates/wdl-analysis/tests/validation/duplicate-requirements/source.errors
error: task `t` contains a duplicate requirements section
   ┌─ tests/validation/duplicate-requirements/source.wdl:10:5
   │
 6 │     requirements {
   │     ------------ first requirements section is defined here
   ·
10 │     requirements {
   │     ^^^^^^^^^^^^ this requirements section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-requirements/source.wdl:18:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
18 │ task t {
   │      ^ this task conflicts with a previously used name

